nytt felt i api: partOfNavNo
