# app/src/main/resources/static/openapi/documentation.yaml
@@ -4,17 +4,49 @@ info:
   description: "accessibility_reporting_tool API"
   version: "1.0.0"
 servers:
-- url: "https://accessibility_reporting_tool"
+  - url: "https://a11y-statement.ansatt.dev.nav.no/"
+  - url: "https://a11y-statement.ansatt.nav.no/"
 paths:
+  /api/reports:
+    get:
+      description: ""
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/ReportListItem"
+        "400":
+          description: "Bad Request"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+                Example#3:
+                  value: ""
   /api/reports/{id}:
     get:
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "400":
           description: "Bad Request"
@@ -49,15 +81,14 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/FullReportWithAccessPolicy"
-  /api/reports/{id}/update:
     patch:
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       requestBody:
         content:
           application/json:
@@ -101,20 +132,21 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/FullReport"
-    put:
+                type: "object"
+  /api/reports/{id}/update:
+    patch:
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/FullReport"
+              $ref: "#/components/schemas/ReportUpdate"
         required: true
       responses:
         "400":
@@ -153,10 +185,10 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/FullReport"
+                type: "object"
   /api/reports/list:
     get:
-      description: ""
+      description: "TODO: remove"
       responses:
         "200":
           description: "OK"
@@ -192,7 +224,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Rapport"
+              $ref: "#/components/schemas/NewReport"
         required: true
       responses:
         "400":
@@ -230,15 +262,15 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/TeamSummary"
-  /api/teams/{id}/details:
+  /api/teams/{id}:
     get:
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "400":
           description: "Bad Request"
@@ -269,52 +301,14 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/OrganizationUnit"
-  /api/teams/{id}/reports:
-    get:
+    patch:
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      responses:
-        "400":
-          description: "Bad Request"
-          content:
-            text/plain:
-              schema:
-                type: "string"
-        "500":
-          description: "Internal Server Error"
-          content:
-            text/plain:
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: ""
-                Example#2:
-                  value: ""
-                Example#3:
-                  value: ""
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "array"
-                items:
-                  $ref: "#/components/schemas/ReportListItem"
-  /api/teams/{id}/update:
-    put:
-      description: ""
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       requestBody:
         content:
           application/json:
@@ -355,6 +349,139 @@ paths:
                 type: "string"
         "200":
           description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Unit"
+  /api/teams/{id}/details:
+    get:
+      description: ""
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+        "404":
+          description: "Not Found"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/OrganizationUnit"
+  /api/teams/{id}/reports:
+    get:
+      description: ""
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+                Example#3:
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/ReportListItem"
+  /api/teams/{id}/update:
+    put:
+      description: ""
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TeamUpdate"
+        required: true
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+                Example#3:
+                  value: ""
+                Example#4:
+                  value: ""
+                Example#5:
+                  value: ""
+                Example#6:
+                  value: ""
+        "404":
+          description: "Not Found"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Unit"
   /api/teams/new:
     post:
       description: ""
@@ -392,6 +519,33 @@ paths:
             '*/*':
               schema:
                 type: "object"
+  /api/user:
+    get:
+      description: ""
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+                Example#2:
+                  value: ""
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/UserDetails"
   /api/users/details:
     get:
       description: ""
@@ -419,8 +573,45 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/UserDetails"
+
 components:
   schemas:
+    ReportListItem:
+      type: "object"
+      properties:
+        reportId:
+          type: "string"
+        descriptiveName:
+          type: "string"
+        url:
+          type: "string"
+        teamId:
+          type: "string"
+        teamName:
+          type: "string"
+        lastChanged:
+          type: "string"
+          format: "date-time"
+      required:
+        - "reportId"
+        - "url"
+        - "teamId"
+        - "teamName"
+        - "lastChanged"
+    AdminReportList:
+      type: "object"
+      properties:
+        reports:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/ReportListItem"
+        aggregatedReports:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/ReportListItem"
+      required:
+        - "reports"
+        - "aggregatedReports"
     OrganizationUnit:
       type: "object"
       properties:
@@ -435,10 +626,10 @@ components:
           items:
             type: "string"
       required:
-      - "id"
-      - "name"
-      - "email"
-      - "members"
+        - "id"
+        - "name"
+        - "email"
+        - "members"
     Author:
       type: "object"
       properties:
@@ -447,8 +638,8 @@ components:
         oid:
           type: "string"
       required:
-      - "email"
-      - "oid"
+        - "email"
+        - "oid"
     SuccessCriterion:
       type: "object"
       properties:
@@ -475,10 +666,10 @@ components:
         status:
           type: "string"
           enum:
-          - "COMPLIANT"
-          - "NON_COMPLIANT"
-          - "NOT_APPLICABLE"
-          - "NOT_TESTED"
+            - "COMPLIANT"
+            - "NON_COMPLIANT"
+            - "NOT_APPLICABLE"
+            - "NOT_TESTED"
         wcagUrl:
           type: "string"
         helpUrl:
@@ -488,26 +679,26 @@ components:
         wcagLevel:
           type: "string"
           enum:
-          - "A"
-          - "AA"
-          - "AAA"
-          - "UNKNOWN"
+            - "A"
+            - "AA"
+            - "AAA"
+            - "UNKNOWN"
         successCriterionNumber:
           type: "string"
       required:
-      - "name"
-      - "description"
-      - "principle"
-      - "guideline"
-      - "tools"
-      - "number"
-      - "breakingTheLaw"
-      - "lawDoesNotApply"
-      - "tooHardToComply"
-      - "contentGroup"
-      - "status"
-      - "wcagVersion"
-      - "successCriterionNumber"
+        - "name"
+        - "description"
+        - "principle"
+        - "guideline"
+        - "tools"
+        - "number"
+        - "breakingTheLaw"
+        - "lawDoesNotApply"
+        - "tooHardToComply"
+        - "contentGroup"
+        - "status"
+        - "wcagVersion"
+        - "successCriterionNumber"
     FullReportWithAccessPolicy:
       type: "object"
       properties:
@@ -533,13 +724,16 @@ components:
           format: "date-time"
         hasWriteAccess:
           type: "boolean"
+        lastUpdatedBy:
+          type: "string"
       required:
-      - "reportId"
-      - "url"
-      - "author"
-      - "successCriteria"
-      - "created"
-      - "lastChanged"
+        - "reportId"
+        - "url"
+        - "author"
+        - "successCriteria"
+        - "created"
+        - "lastChanged"
+        - "lastUpdatedBy"
     SuccessCriterionUpdate:
       type: "object"
       properties:
@@ -556,7 +750,7 @@ components:
         status:
           type: "string"
       required:
-      - "number"
+        - "number"
     ReportUpdate:
       type: "object"
       properties:
@@ -574,59 +768,7 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/SuccessCriterionUpdate"
-    FullReport:
-      type: "object"
-      properties:
-        reportId:
-          type: "string"
-        descriptiveName:
-          type: "string"
-        url:
-          type: "string"
-        team:
-          $ref: "#/components/schemas/OrganizationUnit"
-        author:
-          $ref: "#/components/schemas/Author"
-        successCriteria:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/SuccessCriterion"
-        created:
-          type: "string"
-          format: "date-time"
-        lastChanged:
-          type: "string"
-          format: "date-time"
-      required:
-      - "reportId"
-      - "url"
-      - "author"
-      - "successCriteria"
-      - "created"
-      - "lastChanged"
-    ReportListItem:
-      type: "object"
-      properties:
-        reportId:
-          type: "string"
-        descriptiveName:
-          type: "string"
-        url:
-          type: "string"
-        teamId:
-          type: "string"
-        teamName:
-          type: "string"
-        lastChanged:
-          type: "string"
-          format: "date-time"
-      required:
-      - "reportId"
-      - "url"
-      - "teamId"
-      - "teamName"
-      - "lastChanged"
-    Rapport:
+    NewReport:
       type: "object"
       properties:
         name:
@@ -636,9 +778,9 @@ components:
         teamId:
           type: "string"
       required:
-      - "name"
-      - "urlTilSiden"
-      - "teamId"
+        - "name"
+        - "urlTilSiden"
+        - "teamId"
     TeamSummary:
       type: "object"
       properties:
@@ -649,9 +791,9 @@ components:
         email:
           type: "string"
       required:
-      - "id"
-      - "name"
-      - "email"
+        - "id"
+        - "name"
+        - "email"
     TeamUpdate:
       type: "object"
       properties:
@@ -666,7 +808,10 @@ components:
           items:
             type: "string"
       required:
-      - "id"
+        - "id"
+    Unit:
+      type: "object"
+      properties: {}
     NewTeam:
       type: "object"
       properties:
@@ -679,16 +824,12 @@ components:
           items:
             type: "string"
       required:
-      - "name"
-      - "email"
-      - "members"
+        - "name"
+        - "email"
+        - "members"
     UserDetails:
       type: "object"
       properties:
-        name:
-          type: "string"
-        email:
-          type: "string"
         reports:
           type: "array"
           items:
@@ -697,8 +838,11 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/OrganizationUnit"
+        name:
+          type: "string"
+        email:
+          type: "string"
       required:
-      - "name"
-      - "email"
-      - "reports"
-      - "teams"
+        - "reports"
+        - "teams"
+        - "email"
